--- a/soccer.html
+++ b/soccer.html
@@ -99,169 +99,139 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Hull City vs Queens Park Rangers</a></td>
-<td>February 21, 2026 4:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 04:30:00 AM" data-start="February 21, 2026 04:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Genoa vs Torino</a></td>
+<td>February 23, 2026 3:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 24, 2026 03:30:00 AM" data-start="February 23, 2026 03:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Stoke City vs Leicester City</a></td>
-<td>February 21, 2026 4:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 04:30:00 AM" data-start="February 21, 2026 04:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Sheffield United vs Sheffield Wednesday</a></td>
+<td>February 23, 2026 4:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 24, 2026 04:00:00 AM" data-start="February 23, 2026 04:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-21">Plymouth Argyle vs Cardiff City</a></td>
-<td>February 21, 2026 4:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 04:30:00 AM" data-start="February 21, 2026 04:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Real Sociedad vs Real Oviedo</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Getafe vs Sevilla</a></td>
 <td>February 21, 2026 5:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 05:00:00 AM" data-start="February 21, 2026 05:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Juventus vs Como</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Crystal Palace vs Wolves</a></td>
 <td>February 21, 2026 6:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 06:00:00 AM" data-start="February 21, 2026 06:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Bayern München vs Eintracht Frankfurt</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Nottingham Forest vs Liverpool</a></td>
+<td>February 21, 2026 6:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 06:00:00 AM" data-start="February 21, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Sunderland vs Fulham</a></td>
+<td>February 21, 2026 6:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 06:00:00 AM" data-start="February 21, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Auxerre vs Rennes</a></td>
+<td>February 21, 2026 6:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 06:00:00 AM" data-start="February 21, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Atalanta vs Napoli</a></td>
+<td>February 21, 2026 6:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 06:00:00 AM" data-start="February 21, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Freiburg vs M'gladbach</a></td>
 <td>February 21, 2026 6:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 06:30:00 AM" data-start="February 21, 2026 06:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Aston Villa vs Leeds United</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Livingston vs Rangers</a></td>
 <td>February 21, 2026 7:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Brentford vs Brighton</a></td>
-<td>February 21, 2026 7:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Chelsea vs Burnley</a></td>
-<td>February 21, 2026 7:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Real Betis vs Rayo Vallecano</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Barcelona vs Levante</a></td>
 <td>February 21, 2026 7:15 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 07:15:00 AM" data-start="February 21, 2026 07:15:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Lens vs Monaco</a></td>
-<td>February 21, 2026 8:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 08:00:00 AM" data-start="February 21, 2026 08:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Angers SCO vs Lille</a></td>
+<td>February 21, 2026 8:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 08:15:00 AM" data-start="February 21, 2026 08:15:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Lecce vs Inter Milan</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Nice vs Lorient</a></td>
+<td>February 21, 2026 8:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 08:15:00 AM" data-start="February 21, 2026 08:15:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Tottenham Hotspur vs Arsenal</a></td>
+<td>February 21, 2026 8:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 08:30:00 AM" data-start="February 21, 2026 08:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">St. Pauli vs Werder Bremen</a></td>
+<td>February 21, 2026 8:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 08:30:00 AM" data-start="February 21, 2026 08:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Milan vs Parma</a></td>
 <td>February 21, 2026 9:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 09:00:00 AM" data-start="February 21, 2026 09:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Konyaspor vs Galatasaray</a></td>
-<td>February 21, 2026 9:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 09:00:00 AM" data-start="February 21, 2026 09:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Osasuna vs Real Madrid</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Celta De Vigo vs Mallorca</a></td>
 <td>February 21, 2026 9:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 09:30:00 AM" data-start="February 21, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">West Ham vs Bournemouth</a></td>
-<td>February 21, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 09:30:00 AM" data-start="February 21, 2026 09:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Heidenheim vs Stuttgart</a></td>
+<td>February 21, 2026 10:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 10:30:00 AM" data-start="February 21, 2026 10:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">RB Leipzig vs Dortmund</a></td>
-<td>February 21, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 09:30:00 AM" data-start="February 21, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Benfica vs AVS</a></td>
-<td>February 21, 2026 10:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 10:00:00 AM" data-start="February 21, 2026 10:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Toulouse vs Paris</a></td>
-<td>February 21, 2026 10:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 10:00:00 AM" data-start="February 21, 2026 10:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Al Nassr vs Al Hazm</a></td>
-<td>February 21, 2026 11:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 11:00:00 AM" data-start="February 21, 2026 11:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Cagliari vs Lazio</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Strasbourg vs Lyon</a></td>
 <td>February 21, 2026 11:45 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 11:45:00 AM" data-start="February 21, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Atlético Madrid vs Espanyol</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Roma vs Cremonese</a></td>
+<td>February 21, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 11:45:00 AM" data-start="February 21, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Villarreal vs Valencia</a></td>
 <td>February 21, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 12:00:00 PM" data-start="February 21, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Man City vs Newcastle United</a></td>
-<td>February 21, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 12:00:00 PM" data-start="February 21, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">PSG vs Metz</a></td>
-<td>February 21, 2026 12:05 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 12:05:00 PM" data-start="February 21, 2026 12:05:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-15">O'Higgins vs Colo Colo</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Vasco Da Gama vs Fluminense</a></td>
 <td>February 21, 2026 1:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 01:00:00 PM" data-start="February 21, 2026 01:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">Cincinnati vs Atlanta United</a></td>
-<td>February 21, 2026 1:45 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 01:45:00 PM" data-start="February 21, 2026 01:45:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Vélez Sarsfield vs River Plate</a></td>
+<td>February 21, 2026 2:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 02:15:00 PM" data-start="February 21, 2026 02:15:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-17">Atlas vs Atlético San Luis</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Pumas UNAM vs Monterrey</a></td>
 <td>February 21, 2026 3:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 03:00:00 PM" data-start="February 21, 2026 03:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-18">Vancouver Whitecaps vs Real Salt Lake</a></td>
-<td>February 21, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 04:30:00 PM" data-start="February 21, 2026 04:30:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Flamengo vs Madureira</a></td>
+<td>February 21, 2026 3:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 03:30:00 PM" data-start="February 21, 2026 03:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-19">León vs Santos Laguna</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-15">Querétaro vs Juarez</a></td>
 <td>February 21, 2026 5:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 22, 2026 05:00:00 PM" data-start="February 21, 2026 05:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-20">Necaxa vs Toluca</a></td>
-<td>February 21, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 05:00:00 PM" data-start="February 21, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-21">Inter Miami vs LAFC</a></td>
-<td>February 21, 2026 6:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 06:30:00 PM" data-start="February 21, 2026 06:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-20">Cruz Azul vs Chivas</a></td>
-<td>February 21, 2026 7:05 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 07:05:00 PM" data-start="February 21, 2026 07:05:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-18">San Diego vs CF Montréal</a></td>
-<td>February 21, 2026 7:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 07:30:00 PM" data-start="February 21, 2026 07:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-20">Tijuana vs Mazatlán</a></td>
-<td>February 21, 2026 9:10 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 22, 2026 09:10:00 PM" data-start="February 21, 2026 09:10:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-16">Seattle Sounders FC vs Colorado Rapids</a></td>
+<td>February 21, 2026 5:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 22, 2026 05:15:00 PM" data-start="February 21, 2026 05:15:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
