--- a/motorsports.html
+++ b/motorsports.html
@@ -98,24 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross - Qualifying</a></td>
-<td>February 21, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 21, 2026 22:00:00" data-start="February 21, 2026 10:00:00"></span>
-</td>
-<tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series - Race</a></td>
-<td>February 21, 2026 10:50 AM</td>
-<td><span class="countdown-timer" data-end="February 21, 2026 22:50:00" data-start="February 21, 2026 10:50:00"></span>
-</td>
-<tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR O'Reilly Auto Parts Series - Race</a></td>
-<td>February 21, 2026 14:20 PM</td>
-<td><span class="countdown-timer" data-end="February 22, 2026 02:20:00" data-start="February 21, 2026 14:20:00"></span>
-</td>
-<tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross - Heats &amp; Race</a></td>
-<td>February 21, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="February 22, 2026 04:00:00" data-start="February 21, 2026 16:00:00"></span>
+<td><a href="https://roxiestreams.info/supercross">NASCAR Cup Series - Race</a></td>
+<td>February 22, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 23, 2026 22:00:00" data-start="February 22, 2026 12:00:00"></span>
 </td>
 <tr>
 </tr></tr></tr></tr></tr></tbody>
