--- a/index.html
+++ b/index.html
@@ -216,19 +216,24 @@ If you're having issues with streams, try refreshing the page or using an incogn
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 21, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 21, 2026 00:01:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/olympics">FINAL DAY WINTER OLYMPICS</a></td>
+<td>February 22, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 22, 2026 00:01:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Laliga</a></td>
+<td>February 22, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="February 23, 2026 05:00:00 AM" data-start="February 22, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 21, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM"></span></td>
+<td>February 22, 2026 06:00 AM</td>
+<td><span class="countdown-timer" data-end="February 23, 2026 06:00:00 AM" data-start="February 22, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross</a></td>
-<td>February 21, 2026 10:00 AM/4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 22, 2026 12:00:00 PM" data-start="February 21, 2026 10:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Race</a></td>
+<td>February 22, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 23, 2026 12:00:00 PM" data-start="February 22, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">MLS</a></td>
