--- a/motorsports.html
+++ b/motorsports.html
@@ -98,7 +98,7 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">NASCAR Cup Series - Race</a></td>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Race</a></td>
 <td>February 22, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 23, 2026 22:00:00" data-start="February 22, 2026 12:00:00"></span>
 </td>
