--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@ https://rentry.co/roxiestreams0
 If you're having issues with streams, try refreshing the page or using an incognito window.
 <button class="btn-close" data-bs-dismiss="alert" type="button"></button>
 </div>
+<div class="alert alert-warning alert-dismissible mt-2" role="alert" style="background-color: #001a33; border: 2px solid #0066cc; color: #00bfff; box-shadow: 0 0 6px rgba(0, 102, 204, 0.4);">
+  MLB Spring Training & NCAAB Will be added in the coming days — stay tuned for the next update!
+  <button class="btn-close" data-bs-dismiss="alert" type="button"></button>
+</div>
 <div class="mt-5">
 <h2 class="text-center" style="font-family: 'Kanit', sans-serif; font-weight: bold; color: #f8b8d0;">Upcoming Events</h2>
 <table id="eventsTable">
