--- a/fighting.html
+++ b/fighting.html
@@ -100,17 +100,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams-2">Cage Warriors 200</a></td>
-<td>February 21, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 09:30:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Strickland vs Hernandez</a></td>
-<td>February 21, 2026 14:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 14:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">Ryan Garcia vs Mario Barriors</a></td>
-<td>February 21, 2026 15:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 15:00:00"></span></td>
+<td><a href="https://roxiestreams.info/ppv-streams-1">Shields vs Crews Dezurn 2</a></td>
+<td>February 22, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 22, 2026 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
